# teamskeeper

./: .gitignore  CMakeLists.txt  README.md  build.bat  compile-windows.md  release-instructions.md
.github/workflows/: build-windows.yml
src/: ActivitySimulator.cpp  ActivitySimulator.h  PowerManager.cpp  PowerManager.h  SystemTray.cpp  SystemTray.h  TeamsKeeper.cpp  TeamsKeeper.h  main.cpp  resource.h  resources.rc
